assets/style.css
/*! normalize.css v2.1.0 | MIT License | git.io/normalize */

/* ==========================================================================
   HTML5 display definitions
   ========================================================================== */

/**
 * Correct `block` display not defined in IE 8/9.
 */

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section,
summary {
    display: block;
}

/**
 * Correct `inline-block` display not defined in IE 8/9.
 */

audio,
canvas,
video {
    display: inline-block;
}

/**
 * Prevent modern browsers from displaying `audio` without controls.
 * Remove excess height in iOS 5 devices.
 */

audio:not([controls]) {
    display: none;
    height: 0;
}

/**
 * Address styling not present in IE 8/9.
 */

[hidden] {
    display: none;
}

/* ==========================================================================
   Base
   ========================================================================== */

/**
 * 1. Set default font family to sans-serif.
 * 2. Prevent iOS text size adjust after orientation change, without disabling
 *    user zoom.
 */

html {
    font-family: sans-serif; /* 1 */
    -webkit-text-size-adjust: 100%; /* 2 */
    -ms-text-size-adjust: 100%; /* 2 */
}

/**
 * Remove default margin.
 */

body {
    margin: 0;
}

/* ==========================================================================
   Links
   ========================================================================== */

/**
 * Address `outline` inconsistency between Chrome and other browsers.
 */

a:focus {
    outline: thin dotted;
}

/**
 * Improve readability when focused and also mouse hovered in all browsers.
 */

a:active,
a:hover {
    outline: 0;
}

/* ==========================================================================
   Typography
   ========================================================================== */

/**
 * Address variable `h1` font-size and margin within `section` and `article`
 * contexts in Firefox 4+, Safari 5, and Chrome.
 */

h1 {
    font-size: 2em;
    margin: 0.67em 0;
}

/**
 * Address styling not present in IE 8/9, Safari 5, and Chrome.
 */

abbr[title] {
    border-bottom: 1px dotted;
}

/**
 * Address styling not present in Safari 5 and Chrome.
 */

dfn {
    font-style: italic;
}

/**
 * Address differences between Firefox and other browsers.
 */

hr {
    -moz-box-sizing: content-box;
    box-sizing: content-box;
    height: 0;
}

/**
 * Address styling not present in IE 8/9.
 */

mark {
    background: #ff0;
    color: #000;
}

/**
 * Correct font family set oddly in Safari 5 and Chrome.
 */

code,
kbd,
pre,
samp {
    background-color: antiquewhite;
    font-family: monospace, serif;
    font-size: 1em;
}

/**
 * Improve readability of pre-formatted text in all browsers.
 */

pre {
    white-space: pre-wrap;
}

/**
 * Set consistent quote types.
 */

q {
    quotes: "\201C" "\201D" "\2018" "\2019";
}

/**
 * Address inconsistent and variable font size in all browsers.
 */

small {
    font-size: 80%;
}

/**
 * Prevent `sub` and `sup` affecting `line-height` in all browsers.
 */

sub,
sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
}

sup {
    top: -0.5em;
}

sub {
    bottom: -0.25em;
}

/* ==========================================================================
   Embedded content
   ========================================================================== */

/**
 * Remove border when inside `a` element in IE 8/9.
 */

img {
    border: 0;
}

/**
 * Correct overflow displayed oddly in IE 9.
 */

svg:not(:root) {
    overflow: hidden;
}

/* ==========================================================================
   Figures
   ========================================================================== */

/**
 * Address margin not present in IE 8/9 and Safari 5.
 */

figure {
    margin: 0;
}


/* GENERAL */
html,
body {
  height: 100%;
}

body {
  background: #fff;
}

body,
input,
textarea {
  color: #191919;
  font: 14px/140% 'Open Sans', Arial, sans-serif;
}

a {
  color: #119bdf;
  text-decoration: none;
}
a:hover {
  color: #29aeef;
  text-decoration: underline;
}

/* SIDEBAR */
#sidebar {
  background: #191919;
  color: #fff;
  float: left;  
  height: 100%;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 240px;
}

#sidebar h1 {
  background: #111;
  font-size: 14px;
  margin: 0;
  padding: 20px;
  text-transform: uppercase;
}

#sidebar ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

#sidebar ul#links {
  padding: 20px;
}

#sidebar ul ul {
  padding-left: 20px;
}

#sidebar ul li a {
  color: #fff;
  display: block;
  padding: 0 0 15px;
}
#sidebar ul li a:active,
#sidebar ul li a.active {
  text-decoration: underline;
}

/* References */
#content {
  padding: 20px;
  padding-left: 260px;
  max-width: 700px;
}

#content .control {
  cursor: pointer;
  font-size: 12px;
  margin-left: 15px;
}

#content article {
  clear: both;
  margin: 15px 0;
}

#content article > a {
  background: #333;
  border-radius: 2px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  cursor: pointer;
  display: block;
  padding: 15px;
}
#content article > a:hover {
  background: #222;
  text-decoration: none;
}

#content a h2 {
  color: #fff;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
}

#content a h2 code {
  float: right;
  font-size: 14px;
}

#content a h2 code b {
  border-radius: 2px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  color: #fff;
  font-weight: normal;
  padding: 3px 6px;
}

/* Default */
#content article {
  border-color: #e2e7ea;
}

#content article a h2 code {
  color: #657e8b;
}

#content article a h2 code b {
  background: #657e8b;
  text-transform: uppercase;
}

#content .body {
  border-top: 1px solid #eef1f2;
  display: block;
  padding: 15px 15px 0;
}

#content .body code {
  border: 1px solid #e2e7ea;
  background: #eef1f2;
  border-radius: 2px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  color: #546974;
  padding: 0 1px;
}

#content .body p > code {
  display: block;
  padding: 15px;
  white-space: pre;
}

section {
    left: 275px;
    margin-top: 50px;
    padding-bottom: 50px;
    padding-right: 50px;
    position: absolute;
}

pre {
    background-color: antiquewhite;
    margin-left: 25px;
    padding: 15px;
    width: 90%;
}

.notice {
    background-color: yellow;
    font-style: italic;
    padding: 15px;
}

.warning {
    background-color: pink;
    font-style: italic;
    padding: 15px;
}

.copyright {
    font-size: xx-small;
    margin-top: 75px;
    text-align: center;
}

.module-info {
    background-color: lightgray;
    float: right;
    line-height: 25px;
    padding: 20px;
    width: 240px;
}

.module-info label {
    font-weight: bold;
}

.module-info td {
    white-space: nowrap;
}

.column {
    width: 47%;
}

article img {
    float: right;
    margin: 10px;
}

table {
    /*border: 1px solid lightgray;*/
}

td {
    border-right: 1px solid lightgray;
    padding: 5px;
}

tbody tr:nth-child(n+1) td {
    border-bottom: 1px solid lightgray;
}

